# vulkan-2d-sidescroller

./: Build_Program.bat  CMakeLists.txt  Git_Push.bat  README.md
src/: main.cpp
src/entities/: Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/game/: Game.cpp  Game.h
src/renderer/: VulkanRenderer.cpp  VulkanRenderer.h
src/ui/: Button.h  Menu.h  ResourceManager.cpp  ResourceManager.h  SettingsMenu.h  UIUtils.h
src/utils/: Utils.cpp  Utils.h
